added jwt authorization
